<resources>
    <string name="app_name">meine Gleitzeit</string>
    <string name="dienstbeginn">Dienstbeginn (std:min)</string>
    <string name="dienstende">Dienstende (std:min)</string>
    <string name="pause">Pause (min)</string>
    <string name="sollarbeitszeit">Sollarbeitszeit (std:min)</string>
    <string name="erzielteZeit">Erzielte Zeit: 00std 00min</string>
    <string name="stunde">hh</string>
    <string name="minute">mm</string>
    <string name="doppelpunkt">:</string>
    <string name="Berechnen">Berechnen</string>
    <string name="jetzt">jetzt</string>
    <string name="letzter">letzter</string>
    <string name="fruehestens">frühestens</string>
    <string name="ueberMeineGleitzeit">Über</string>
    <string name="beenden">Schließen</string>
    <string name="felderLoeschen">Felder löschen</string>
    <string name="alle_zeitraeume_loeschen">Neuer Arbeitstag</string>
    <string name="alle_zeitraeume_loeschen_bestaetigung">Alle Zeiträume außer dem ersten löschen?</string>
    <string name="sprache_waehlen">Sprache wählen</string>
    <string name="systemsprache">Systemsprache</string>
    <string name="sprache_menue">Sprache (Language)</string>
    <string name="fehler_stunden">Bitte gültige Stunden eingeben (0–23)</string>
    <string name="fehler_minuten">Bitte gültige Minuten eingeben (0–59)</string>
    <string name="fehler_pause">Bitte gültige Pausenzeit eingeben (0–999 min)</string>
    <string name="fehler_fehlende_zeiten">Bitte fehlende Zeiten eingeben</string>
    <string name="bitte_neu_berechnen">Bitte neu berechnen</string>
    <string name="fehler_pause_zu_lang">Die Pause ist größer/gleich der Anwesenheit</string>
    <string name="fehler_db_vor_vorgaenger_de">Dienstbeginn liegt vor Dienstende des vorherigen Zeitraums</string>
    <string name="erzielte_zeit_format">Erzielte Zeit: %1$dstd %2$dmin </string>
    <string name="saldo_format">\n Saldo: %1$s %2$dstd %3$dmin </string>
    <string name="erzielte_zeit_format_industrie">Erzielte Zeit: %1$s h </string>
    <string name="saldo_format_industrie">\n Saldo: %1$s%2$s h </string>
    <string name="block_titel">Zeitraum %1$d</string>
    <string name="neuer_block">Neuer Zeitraum</string>
    <string name="hinweis_aenderung_zeitraum">Hinweis: Änderungen hier wirken sich auf nachfolgende Zeiträume aus. Drücke \”Berechnen\”, um alle Ergebnisse zu aktualisieren.</string>
    <string name="hinweis_verstanden">Verstanden</string>
    <string name="zeitraum_info_titel">Wozu dient der + Button?</string>
    <string name="zeitraum_info_text">Ein neuer Zeitraum ist für Unterbrechungen innerhalb desselben Arbeitstages.\n\nBeispiel: Du arbeitest 8:00–12:00, machst eine längere Pause, und arbeitest dann 13:30–17:00 weiter. Trage die beiden Abschnitte in getrennte Zeiträume ein – die App rechnet sie zusammen.\n\nFrühere Zeiträume können jederzeit bearbeitet werden. Nach dem Drücken von “Berechnen“ werden alle nachfolgenden Zeiträume automatisch neu berechnet.\n\nEinen einzelnen Zeitraum kannst du über das × auf dem letzten Tab-Reiter schließen. Um einen früheren Zeitraum zu löschen, müssen zunächst alle nachfolgenden Zeiträume geschlossen werden.\n\nFür einen neuen Arbeitstag lösche bitte die Zeitraum-Tabs über den Menü-Eintrag “Neuer Arbeitstag”.</string>
    <string name="block_schliessen">Zeitraum schließen</string>
    <string name="arbeitsstelle_menue">Job wechseln</string>
    <string name="arbeitsstelle_waehlen">Job wählen</string>
    <string name="arbeitsstelle_format">Job %1$d</string>
    <string name="jobs_benennen">Jobs benennen</string>
    <string name="hilfe_menue">Hilfe</string>
    <string name="hilfe_dialog_titel">Hilfe</string>
    <string name="hilfe_dialog_text">Grundbedienung:\nGib Dienstbeginn, Dienstende, Pause und Sollarbeitszeit ein und tippe auf \"Berechnen\". Die App zeigt die erzielte Zeit und den Saldo (Mehr-/Minderstunden).\n\nDienstbeginn-Buttons:\n• \"jetzt\" – aktuelle Uhrzeit eintragen\n• \"letzter\" – letzten gespeicherten Dienstbeginn übernehmen\n\nDienstende-Buttons:\n• \"frühestens\" – berechnet das frühestmögliche Dienstende\n• \"jetzt\" – aktuelle Uhrzeit eintragen\n\nMehrere Zeiträume:\nEin Zeitraum steht für einen zusammenhängenden Arbeitsabschnitt am selben Tag – z. b. wenn du den Arbeitsplatz zwischendurch für längere Zeit verlässt. Mit \"+\" fügst du einen weiteren Zeitraum hinzu; berechne dazu zuerst den aktuellen. Die Arbeitszeiten aller Zeiträume werden zusammengezählt. Den letzten Zeitraum kannst du mit dem \"×\"-Button auf seinem Tab-Register löschen. Frühere Zeiträume können jederzeit bearbeitet werden – nach dem Drücken von \"Berechnen\" werden alle nachfolgenden Zeiträume automatisch neu berechnet.\n\nZwei Jobs:\nÜber \"Job wechseln\" wechselst du zwischen zwei unabhängigen Arbeitszeitkonten. Die Namen kannst du unter \"Jobs benennen\" anpassen.\n\nVerlauf:\nMit \"Tag speichern\" speicherst du das Ergebnis des aktuellen Tages. Das heutige Datum ist vorbelegt, kann aber geändert werden. Unter \"Verlauf\" siehst du alle gespeicherten Einträge. Von dort kannst du den Verlauf auch als Textdatei exportieren.\n\nZeitformat:\nUnter \"Zeitformat wählen\" kannst du zwischen dem Standard-Format (HH:MM) und dem Industrieformat (Dezimalstunden, z. B. 8,75 h) wechseln. Die Einstellung gilt je Job.\n\nAutomatische Pause:\nUnter \"Automatische Pause\" kannst du einen automatischen Pausenabzug konfigurieren, der je nach Anwesenheitsdauer greift – bis zu 4 Stufen, getrennt für jeden Job. Manuell eingegebene Pausen werden zusätzlich abgezogen.\n\nErinnerung:\nTippe auf das Wecker-Icon in der Seitenleiste, um eine Erinnerung für das berechnete Dienstende zu setzen. Das Icon wird grün, solange ein Alarm aktiv ist. Ein erneutes Antippen löscht den Alarm. Per langem Tippen siehst du, für welche Uhrzeit der Alarm gesetzt ist.\n\nSchnellzugriff (Seitenleiste):\nDie Seitenleiste am rechten Rand bietet direkten Zugriff auf die wichtigsten Funktionen: Tag speichern, Verlauf, alle Zeiträume löschen, Job wechseln und diese Hilfe.</string>
    <string name="ueber_dialog_titel">meine Gleitzeit</string>
    <string name="ueber_dialog_text">Version 1.19\n\n© 2026 Michael Formanski\nLeverkusen, Deutschland\nOpen Source (MIT-Lizenz)\n\nEin einfacher Arbeitszeitrechner\nfür Gleitzeit.\n\nDatenschutzerklärung:\nhttps://leverbursche.github.io/meine-gleitzeit-datenschutz/\n\nMaterial Design Icons von Google stehen unter der Apache 2.0 Lizenz</string>
    <string name="tag_speichern">Tag speichern</string>
    <string name="verlauf">Verlauf</string>
    <string name="verlauf_leer">Noch keine gespeicherten Einträge.</string>
    <string name="tag_speichern_bestaetigung">Tag %s speichern?</string>
    <string name="tag_ueberschreiben">Eintrag für %s ist bereits vorhanden. Überschreiben?</string>
    <string name="tag_gespeichert">Gespeichert.</string>
    <string name="tag_loeschen_bestaetigung">Eintrag vom %s löschen?</string>
    <string name="verlauf_beginn">Beginn:</string>
    <string name="verlauf_ende">Ende:</string>
    <string name="verlauf_pause_label">Pause:</string>
    <string name="verlauf_auto_pause_hinweis">* = automatischer Pausenabzug</string>
    <string name="verlauf_auto_pause_abzug">automatischer Pausenabzug: %1$d min</string>
    <string name="verlauf_soll_label">Soll:</string>
    <string name="verlauf_loeschen">Löschen</string>
    <string name="verlauf_alle_loeschen">Alle löschen</string>
    <string name="verlauf_alle_loeschen_bestaetigung">Alle Einträge löschen?</string>
    <string name="verlauf_keine_berechnung">Bitte zuerst den letzten Zeitraum berechnen.</string>
    <string name="hinweis_berechnen_vor_speichern">Bitte zuerst den aktuell geänderten Zeitraum berechnen.</string>
    <string name="verlauf_exportieren">Exportieren</string>
    <string name="verlauf_gespeichert">Datei gespeichert.</string>
    <string name="verlauf_gesamt_soll">Gesamt-Soll: %1$dh %2$dmin</string>
    <string name="verlauf_gesamt">Gesamt-Ist: %1$dh %2$dmin</string>
    <string name="verlauf_gesamt_saldo">Gesamt-Saldo: %1$s%2$dh %3$dmin</string>
    <string name="hinweis_neuer_zeitraum">Neuer Arbeitsabschnitt am selben Tag.</string>
    <string name="zeitformat_waehlen">Zeitformat wählen</string>
    <string name="natuerliche_zeit">Natürliche Zeit</string>
    <string name="industriezeit">Industriezeit</string>
    <string name="auto_pause_menue">Automatische Pause</string>
    <string name="auto_pause_beschreibung">Automatischer Pausenabzug nach Anwesenheitsdauer, bis zu 4 Stufen konfigurierbar.</string>
    <string name="auto_pause_hinweis">+ zusätzlich automatischer Pausenabzug (siehe Menü)</string>
    <string name="auto_pause_abzug_format">+%1$d min automatischer Pausenabzug</string>
    <string name="auto_pause_default_erklaerung">Die Vorgabe 360 min → 30 min, 540 min → 15 min, Mindestdauer Pause 15 min, orientiert sich am deutschen Arbeitszeitgesetz, Stand 2026.</string>
    <string name="auto_pause_aktiv">Aktiv</string>
    <string name="auto_pause_hint_ab">nach mehr als (min)</string>
    <string name="auto_pause_hint_pause">Pause (min)</string>
    <string name="auto_pause_modus_pauschal">pauschal abziehen</string>
    <string name="auto_pause_modus_differenziell">nur Minuten über Schwellwert</string>
    <string name="auto_pause_modus_pauschal_info">Die konfigurierte Pausenzeit wird vollständig abgezogen.</string>
    <string name="auto_pause_modus_differenziell_info">Nur die Minuten, die den Schwellwert übersteigen, werden abgezogen.</string>
    <string name="auto_pause_stufen_info">Mehrere Stufen werden addiert: Treffen mehrere Stufen zu, werden alle Pausenzeiten zusammengezählt. (Bsp.: 360→30 und 540→15: bei über 9 h Anwesenheit werden 45 min abgezogen.)</string>
    <string name="auto_pause_min_zwischenpause">Mindestdauer Pause (min)</string>
    <string name="auto_pause_min_zwischenpause_info">Wichtig: Wenn du mehrere Zeiträume öffnest, werden Lücken zwischen diesen Zeiträumen nur dann als Pausen angerechnet, wenn sie mindestens diese Anzahl Minuten dauern (leer = alle Lücken werden angerechnet). Manuell eingegebene Pausen werden hingegen immer zusätzlich abgezogen. Der automatische Pausenabzug erfolgt immer im letzten Zeitraum-Tab.</string>
    <string name="alarm_erinnerung">Erinnerung</string>
    <string name="alarm_gesetzt">Erinnerung gesetzt für %1$s Uhr</string>
    <string name="alarm_geloescht">Erinnerung gelöscht</string>
    <string name="alarm_kein_dienstende">Kein Dienstende berechnet</string>
    <string name="alarm_icon_hinweis">Erinnerung bei Dienstende setzen</string>
    <string name="alarm_keine_berechtigung">Bitte erlaube exakte Alarme in den App-Einstellungen.</string>
    <string name="alarm_benachrichtigung_titel">Dienstende erreicht</string>
    <string name="alarm_benachrichtigung_text">Dein Dienst endet jetzt.</string>
    <string name="alarm_kanal_name">Dienstende-Erinnerungen</string>
</resources>